panko-compiletest/src/snapshots/panko_compiletest__typeck-panko__tests__cases__decl_in_global_scope__test_error_invalid_function_decls.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid function return type `fn() -> int`
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:2:1]
   │
 2 │ int a()();
   │ ────┬────  
   │     ╰────── declaration here
───╯

Error: invalid function return type `fn() -> int`
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:8:1]
   │
 8 │ int ((*c(void))())();
   │ ──────────┬─────────  
   │           ╰─────────── declaration here
───╯

Error: cannot declare function parameter `param` with incomplete type `void`
    ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:11:12]
    │
 11 │ int d(void param);
    │            ──┬──  
    │              ╰──── parameter declared here
────╯

Error: invalid function return type `array<int; 42>`
    ╭─[panko/tests/cases/decl_in_global_scope/test_error_invalid_function_decls.c:17:1]
    │
 17 │ int f()[42];
    │ ─────┬─────  
    │      ╰─────── declaration here
────╯
